# ctrlp-cIndexer

./: .gitignore  CMakeLists.txt  ctrlp.patch  install.py  install.sh
autoload/: cIndexer.vim  python.vim
cIndexer/: cIndexer.cc  cIndexer.h  setup.py
cIndexer/windows/: dirent.h
plugin/: cIndexer.vim
